Avoid div overlapping the excursion title. Fixes #76

--- a/app/assets/stylesheets/vish/base/excursions.sass
+++ b/app/assets/stylesheets/vish/base/excursions.sass
@@ -148,7 +148,6 @@
       padding-left: 5px
       .title-excursion
         width: 93%
-        float: left
         font-size: 16px
         @include ellipsis
       .action
